--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// mapstruct
+	implementation 'org.mapstruct:mapstruct:1.6.1'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.1'
+	// mysql
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
