--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?serverTimezone=UTC
 spring.datasource.username=studentuser
 spring.datasource.password=studentpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
